2021-05-13 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/t-reuse.c: Use numberof() to reduce the risk of typos.

2021-04-16 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (gmp_millerrabin): Don't check unlikely 0 or 1.
	* mini-gmp.h: Update FILE tests from gmp-h.

2021-01-02 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_export): Correct error message (tx: Guillermo Monguia)

2020-11-28 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c (mpz_gcd): Support limbs larger than unsigned long.
	* tests/t-invert.c: Likewise.

2020-05-21  Torbjörn Granlund  <tg@gmplib.org>

	* tests/t-double.c: Provide default M_PI definition.

2020-11-10 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/run-tests: Update WINEPATH, instead of overwriting it.

2020-10-25 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-mpq.c (mpq_canonical_sign): Use the correct type for size.

2020-10-18 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mini-gmp.c: Use mpn_scan1 instead of mpz_scan1.
	(mpn_set_str_bits): Reduce branches and writes.
	(mpz_gcdext): Delay mpz_setbit (t0, ...).

	* mini-mpq.c (mpq_out_str): Return 0 when base is out of range.
	* mini-gmp.c (mpz_out_str): Likewise. (spotted by Paul Eggert)

	* tests/t-str.c: Test out-of-range bases for mpz_out_str.
	* tests/t-mpq_str.c: Likewise, for mpq_out_str.

2020-10-06  Niels Möller  <nisse@lysator.liu.se>

	* tests/run-tests: Better support for make check on wine or cygwin.

2020-09-10 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* tests/t-mpq_double.c (mpq_get_d_exact_p): Cleanup.

	* mini-gmp.c (mpz_get_str): Explicit cast from void* to char*.

	* mini-gmp.h: Update FILE tests from gmp-h (tx Vincent Lefèvre).

2020-05-27  Minux Ma  <minux.ma@gmail.com>

	Pass correct old_size to custom free and reallocate functions.
	* mini-gmp.c (gmp_alloc): Renamed macro from...
	(gmp_xalloc): .. old name.
	(gmp_realloc): New macro, with old_size argument.
	(gmp_free): Take size argument, and pass on.